--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sass": "^1.79.5"
   }
 }
