--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@types/node": "^16.18.113",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "date-fns": "^4.1.0",
+    "inter-ui": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
