--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^4.1.0",
     "inter-ui": "^4.0.2",
     "react": "^18.3.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-detect-offline": "^2.4.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "babel-eslint": "^10.1.0",
