--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.21.3",
     "date-fns": "^4.1.0",
     "inter-ui": "^4.0.2",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.10",
     "@types/react-detect-offline": "^2.4.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
