--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^16.18.113",
+    "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "antd": "^5.21.3",
+    "antd": "^5.21.4",
     "date-fns": "^4.1.0",
     "inter-ui": "^4.0.2",
     "lodash": "^4.17.21",
@@ -44,21 +44,22 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.10",
+    "@eslint/compat": "^1.2.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
+    "@types/lodash": "^4.17.12",
     "@types/react-detect-offline": "^2.4.5",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "babel-eslint": "^10.1.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.13",
+    "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "eslint": "^9.13.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
-    "sass": "^1.79.5"
+    "sass": "^1.80.3",
+    "typescript-eslint": "^8.10.0"
   }
 }
